--- a/meu-site/config.toml
+++ b/meu-site/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://nellysonfelipe.github.io/meuSite/"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Website de Nellyson Felipe"
